# esp-remote

./: .gitignore  README.md  install.sh  pyproject.toml
esp_remote/: __init__.py  cli.py  config.py  esptool_utils.py  git_ops.py  registry.py  ser2net.py  ssh.py  udev.py
